# docker-traefik-https

./: .gitignore  Dockerfile  README.md  cookiecutter.json  docker-compose.traefik.yml  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
app/core/: config.py
hooks/: post_gen_project.py
notebooks/: .env  Untitled.ipynb
{{cookiecutter.project_slug}}/: .env  Dockerfile  docker-compose.traefik.yml  docker-compose.yaml  pyproject.toml
{{cookiecutter.project_slug}}/app/: database.py  main.py
{{cookiecutter.project_slug}}/app/core/: config.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: database.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/core/: config.py
