[tool.poetry]
name = "learn_kubernetes"
version = "0.1.0"
description = ""
authors = ["apteryxlabs <matthew@apteryxlabs.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.66.0"}
SQLAlchemy = "^1.4.20"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
autoflake = "^1.4"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.0"
pre-commit = "^2.8.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
